...
                                  userProviderNotifier.backgroundImageUrlCtr.text = _backgroundImageUrlCtr.text;
                                  await userProviderNotifier.updateUserProfile();
                                  if (userProviderState.error == null) {
                                    ScaffoldMessenger.of(context).showSnackBar(
                                      SnackBar(
                                        content: const Text(
                                          'Profile updated successfully!',
                                          style: TextStyle(color: Colors.white),
                                        ),
                                        backgroundColor: Colors.black,
                                        duration: const Duration(seconds: 2),
                                        behavior: SnackBarBehavior.floating,
                                        margin: const EdgeInsets.only(bottom: 20.0, left: 16.0, right: 16.0),
...
                                  ? SizedBox(
                                width: 24,
                                height: 24,
                                child: CircularProgressIndicator(color: Colors.white),
                              )
                                  : Text(
                                'Save',
                                style: TextStyle(
                                  color: Colors.white,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                            ),
...
