...
                              ),
                            ),
                          CustomTextField(
                            controller: invitationState.childNameCtr,
                            labelText: "Child's Name",
                            prefixIcon: Icons.person,
                            validator: (v) => v == null || v.isEmpty ? 'Required' : null,
                          ),
                          CustomTextField(
                            controller: invitationState.ageCtr,
                            labelText: "Age",
                            prefixIcon: Icons.cake,
                            keyboardType: TextInputType.number,
...
                                    final state = ref.watch(invitationProvider);
                                    if (state.error == null) {
                                      print('Showing success SnackBar');
                                      ScaffoldMessenger.of(context).showSnackBar(
                                        SnackBar(
                                          content: const Text(
                                            'Invitation submitted successfully!',
                                            style: TextStyle(
                                              color: Colors.white,
                                              fontWeight: FontWeight.bold,
                                            ),
                                          ),
                                          backgroundColor: const Color(0x000000),
...
                                      strokeWidth: 2,
                                    ),
                                  ),
                                ],
                              )
                                  : const Text(
                                'Submit',
                                style: TextStyle(
                                  fontSize: 18,
                                  fontWeight: FontWeight.bold,
                                  color: Colors.white,
                                ),
                              ),
...
